--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -68,4 +68,4 @@ jobs:
             docker pull ${{ secrets.DOCKER_USERNAME }}/persist:latest
             
             # 새로운 컨테이너 실행
-            docker run -d --name persist -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/persist:latest
+            docker run --name persist -p 8080:8080 ${{ secrets.DOCKER_USERNAME }}/persist:latest
