--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,9 +19,11 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: '17'
-
+      
+      # 환경변수 복사
       - name: Extract application-prod.properties
         run: |
+          touch ./src/main/resources/application.properties
           echo "${{ secrets.APPLICATION_PROD_PROPERTIES }}" > src/main/resources/application-prod.properties
 
       # Gradle 빌드
