--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+    // GeoIp2
+    implementation group: 'com.maxmind.geoip2', name: 'geoip2', version: '2.15.0'
 }
 
 tasks.named('test') {
