[Fix] : GeoIp3 일부 수정

--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,10 @@ dependencies {
     implementation group: 'com.maxmind.geoip2', name: 'geoip2', version: '2.15.0'
 }
 
+configurations.configureEach {
+    exclude group: 'commons-logging', module: 'commons-logging'
+}
+
 tasks.named('test') {
     useJUnitPlatform()
 }
