--- a/build.gradle
+++ b/build.gradle
@@ -58,6 +58,15 @@ dependencies {
     // Validation
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    // QueryDsl
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+    annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+    // h2 database
+    testImplementation 'com.h2database:h2'
+
     // GeoIp2
     implementation group: 'com.maxmind.geoip2', name: 'geoip2', version: '2.15.0'
 }
