--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ out/
 ### VS Code ###
 .vscode/
 
-src/main/resources/application.properties
-src/main/resources/application-prod.properties
-src/main/resources/application-local.properties
-src/main/resources/application-test.properties
+### environmnet file
+src/main/resources/*.properties
+src/main/resources/*.yml
+src/main/resources/*.yaml
