--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,5 @@ out/
 ### VS Code ###
 .vscode/
 
-### environmnet file
-src/main/resources/*.properties
-src/main/resources/*.yml
-src/main/resources/*.yaml
+# env
+local.env
