[Feat] : security logging level -> TRACE로 변경 & config 경로 수정

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -18,3 +18,9 @@ jwt:
 geoip2:
   database:
     path: C:\\Users\\yyyti\\Desktop\\GeoLite2-Country.mmdb
+
+logging:
+  level:
+    org:
+      springframework:
+        security: TRACE
