--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,9 @@ dependencies {
     annotationProcessor "jakarta.annotation:jakarta.annotation-api"
     annotationProcessor "jakarta.persistence:jakarta.persistence-api"
 
+    // redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
     // h2 database
     testImplementation 'com.h2database:h2'
 
