--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,10 +21,10 @@ jobs:
           java-version: '17'
       
       # 환경변수 복사
-      - name: Extract application-prod.properties
+      - name : Extract .env
         run: |
-          touch ./src/main/resources/application-prod.properties
-          echo "${{ secrets.APPLICATION_PROD_PROPERTIES }}" > src/main/resources/application-prod.properties
+          touch ./prod.env
+          ehco "${{ secrets.ENV }}" > ./prod.env
 
       # Gradle 빌드
       - name: Build with Gradle
