[Fix] - dev -> deploy로 인한 merge conflict resolve - echo 명령어 오타 수정

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,7 +24,7 @@ jobs:
       - name : Extract .env
         run: |
           touch ./prod.env
-          ehco "${{ secrets.ENV }}" > ./prod.env
+          echo "${{ secrets.ENV }}" > ./prod.env
 
       # Gradle 빌드
       - name: Build with Gradle
