[Fix] - 빌드 시 테스트코드 무시

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build with Gradle
         run: |
           chmod +x ./gradlew
-          ./gradlew build
+          ./gradlew build -x test
 
       # Docker 로그인을 통해 DockerHub로 인증
       - name: Log in to Docker Hub
