--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -13,4 +13,4 @@ spring:
 # geoip2
 geoip2:
   database:
-    path: ./src/main/resources/db/GeoLite2-Country.mmdb
+    path: /db/GeoLite2-Country.mmdb
