[Fix] - env 파일 제외 - ci/cd 템플릿 추가

--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,7 @@ out/
 ### VS Code ###
 .vscode/
 
+*.env
+
 /src/main/resources/application.properties
 /src/main/resources/application-prod.properties
