[Fix] #31 application.yaml에 .env파일 import 설정

--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -2,6 +2,7 @@ spring:
   config:
     activate:
       on-profile: "prod"
+    import: optional:file:local.env
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
