[Fix] #31 application.yaml에 .env파일 import 설정

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -2,7 +2,7 @@ spring:
   config:
     activate:
       on-profile: "local"
-    import: optional:file:local.env
+    import: optional:file:*.env
 
   #datasource
   datasource:
