--- a/src/main/resources/application-redis.yaml
+++ b/src/main/resources/application-redis.yaml
@@ -2,7 +2,7 @@ spring:
   config:
     activate:
       on-profile: "redis"
-    import: optional:file:local.env
+    import: optional:file:*.env
 
   data:
     redis:
