--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -2,7 +2,7 @@ spring:
   config:
     activate:
       on-profile: "prod"
-    import: optional:file:local.env
+    import: optional:file:*.env
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
