--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -74,7 +74,8 @@ jobs:
             docker pull ${{ secrets.DOCKER_USERNAME }}/persist:latest
             
             # 환경변수 복사
-            cp .env ${{ secrets.ENV }}
+            touch ./.env
+            ehco "${{ secrets.ENV }}" > ./.env
             
             # 새로운 컨테이너 실행
             docker run --name=persist -d -p 8080:8080 --env-file .env ${{ secrets.DOCKER_USERNAME }}/persist:latest
