--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -74,8 +74,8 @@ jobs:
             docker pull ${{ secrets.DOCKER_USERNAME }}/persist:latest
             
             # 환경변수 복사
-            touch ./.env
-            ehco "${{ secrets.ENV }}" > ./.env
+            sudo touch ~/.env
+            ehco "${{ secrets.ENV }}" | sudo tee ~/.env > /dev/null
             
             # 새로운 컨테이너 실행
-            docker run --name=persist -d -p 8080:8080 --env-file .env ${{ secrets.DOCKER_USERNAME }}/persist:latest
+            docker run --name=persist -d -p 8080:8080 --env-file ~/.env ${{ secrets.DOCKER_USERNAME }}/persist:latest
