[Feat] : swagger에서 request 소요 시간 표시

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,3 +20,7 @@ spring:
     open-in-view: false
     hibernate:
       ddl-auto: update
+
+springdoc:
+  swagger-ui:
+    display-request-duration: true  # 요청 소요 시간 표시 활성화
