[Feat] : cache 종속성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -72,6 +72,9 @@ dependencies {
 
     // GeoIp2
     implementation group: 'com.maxmind.geoip2', name: 'geoip2', version: '2.15.0'
+
+    // cache
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
 }
 
 configurations.configureEach {
