[Feat] : actuator 프로필 적용

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -36,8 +36,8 @@ geoip2:
   database:
     path: C:\\Users\\yyyti\\Desktop\\GeoLite2-Country.mmdb
 
-logging:
-  level:
-    org:
-      springframework:
-        security: DEBUG
+#logging:
+#  level:
+#    org:
+#      springframework:
+#        security: DEBUG
