[Feat] : 로그 색상 추가

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,6 +21,10 @@ spring:
     hibernate:
       ddl-auto: update
 
+  output:
+    ansi:
+      enabled: always
+
 springdoc:
   swagger-ui:
     display-request-duration: true  # 요청 소요 시간 표시 활성화
