[Feat] : 배포 방식을 docker-compose변경으로 인한 배포 수정

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,14 +39,39 @@ jobs:
       # Docker 이미지를 빌드하고 DockerHub로 푸시
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/persist:latest .
+          docker build --platform linux/amd64 -t ${{ secrets.DOCKER_USERNAME }}/persist:latest .
           docker push ${{ secrets.DOCKER_USERNAME }}/persist:latest
+  
+  
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
 
     steps:
+      # Prometheus 설정 파일을 원격 서버로 복사
+      - name: Upload Prometheus config file
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          source: "./prometheus.yml"
+          target: "/home/ubuntu/"
+
+      # docker compose 설정 파일을 원격 서버로 복사
+      - name: Upload Prometheus config file
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: 22
+          source: "./docker-compose.yaml"
+          target: "/home/ubuntu/"
+
+
       # SSH를 통해 원격 서버에 접속하고 Docker 이미지를 pull한 후 컨테이너 실행
       - name: SSH into server and deploy
         uses: appleboy/ssh-action@v0.1.6
@@ -56,26 +81,19 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            # 기존 실행 중인 컨테이너가 있으면 중지 및 삭제
-            if [ "$(docker ps -q -f name=persist)" ]; then
-              docker stop persist
-              docker rm persist
-            fi
-            
-            # 동일한 이름의 중지된 컨테이너가 있으면 삭제
-            if [ "$(docker ps -a -q -f status=exited -f name=persist)" ]; then
-              docker rm persist
-            fi
-            
-            # 사용되지 않는 이미지 삭제
-            docker image prune -f
-
-            # 최신 이미지로 업데이트
-            docker pull ${{ secrets.DOCKER_USERNAME }}/persist:latest
             
             # 환경변수 복사
             sudo touch ~/.env
             echo "${{ secrets.ENV }}" > ~/.env
             
-            # 새로운 컨테이너 실행
-            docker run --name=persist -d -p 8080:8080 --env-file ~/.env ${{ secrets.DOCKER_USERNAME }}/persist:latest
+            # docker pull 
+            docker pull persist:latest
+            
+            # docker compose 중지
+            docker compose down
+            
+            # docker compose 실행
+            docker compose up -d
+            
+            # 사용되지 않는 이미지 삭제
+            docker image prune -a -f
