--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,11 +20,11 @@ jobs:
         with:
           java-version: '17'
       
-#      # 환경변수 복사
-#      - name : Extract .env
-#        run: |
-#          touch ./prod.env
-#          echo "${{ secrets.ENV }}" > ./prod.env
+      #      # 환경변수 복사
+      #      - name : Extract .env
+      #        run: |
+      #          touch ./prod.env
+      #          echo "${{ secrets.ENV }}" > ./prod.env
 
       # Gradle 빌드
       - name: Build with Gradle
@@ -50,15 +50,14 @@ jobs:
 
     steps:
       # Prometheus 설정 파일을 원격 서버로 복사
-      - name: Upload Prometheus config file
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.REMOTE_HOST }}
-          username: ${{ secrets.REMOTE_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
-          source: "./prometheus.yml"
-          target: "/home/ubuntu/"
+      - name: Copy Prometheus config file to server
+        run: |
+          scp -i ~/.ssh/id_rsa -P 22 ./prometheus.yml ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:/home/${{ secrets.REMOTE_USER }}/prometheus.yml
+
+      # Prometheus 설정 파일을 원격 서버로 복사
+      - name: Copy Prometheus config file to server
+        run: |
+          scp -i ~/.ssh/id_rsa -P 22 ./docker-compose.yaml ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:/home/${{ secrets.REMOTE_USER }}/docker-compose.yaml
 
       # docker compose 설정 파일을 원격 서버로 복사
       - name: Upload Prometheus config file
