[Hotfix] : 설정 파일 복사 실패로 인한 gradle.yml 수정

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -20,11 +20,11 @@ jobs:
         with:
           java-version: '17'
       
-      #      # 환경변수 복사
-      #      - name : Extract .env
-      #        run: |
-      #          touch ./prod.env
-      #          echo "${{ secrets.ENV }}" > ./prod.env
+#      # 환경변수 복사
+#      - name : Extract .env
+#        run: |
+#          touch ./prod.env
+#          echo "${{ secrets.ENV }}" > ./prod.env
 
       # Gradle 빌드
       - name: Build with Gradle
@@ -50,25 +50,27 @@ jobs:
 
     steps:
       # Prometheus 설정 파일을 원격 서버로 복사
-      - name: Copy Prometheus config file to server
-        run: |
-          scp -i ~/.ssh/id_rsa -P 22 ./prometheus.yml ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:/home/${{ secrets.REMOTE_USER }}/prometheus.yml
-
-      # Prometheus 설정 파일을 원격 서버로 복사
-      - name: Copy Prometheus config file to server
-        run: |
-          scp -i ~/.ssh/id_rsa -P 22 ./docker-compose.yaml ${{ secrets.REMOTE_USER }}@${{ secrets.REMOTE_HOST }}:/home/${{ secrets.REMOTE_USER }}/docker-compose.yaml
+      - name: Copy prometheus.yml file to EC2
+        uses: burnett01/rsync-deployments@7.0.1
+        with:
+          switches: -avzr --delete
+          remote_host: ${{ secrets.REMOTE_HOST }}
+          remote_user: ${{ secrets.REMOTE_USER }}
+          remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          path: ./prometheus.yml
+          remote_path: /home/ubuntu/
 
       # docker compose 설정 파일을 원격 서버로 복사
-      - name: Upload Prometheus config file
-        uses: appleboy/scp-action@master
+      - name: Copy docker-compose.yaml file to EC2
+        uses: burnett01/rsync-deployments@7.0.1
         with:
-          host: ${{ secrets.REMOTE_HOST }}
-          username: ${{ secrets.REMOTE_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: 22
-          source: "./docker-compose.yaml"
-          target: "/home/ubuntu/"
+          switches: -avzr --delete
+          remote_host: ${{ secrets.REMOTE_HOST }}
+          remote_user: ${{ secrets.REMOTE_USER }}
+          remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
+          path: ./docker-compose.yaml
+          remote_path: /home/ubuntu/
+
 
 
       # SSH를 통해 원격 서버에 접속하고 Docker 이미지를 pull한 후 컨테이너 실행
