--- a/prometheus.yml
+++ b/prometheus.yml
@@ -4,3 +4,5 @@ global:
 scrape_configs:
   - job_name: 'spring'
     metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: ['43.203.89.62:8080']
